# pagehound

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  dev.sh  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  websocket_manager.py
backend/app/models/: __init__.py  author.py  book.py  download.py  job.py  kobo_device.py  kobo_sync_state.py  metadata_review.py  reading_progress.py  series.py
backend/app/routers/: authors.py  books.py  downloads.py  jobs.py  kobo.py  kobo_admin.py  library.py  metadata.py  opds.py  series.py  ws.py
backend/app/services/: author_enricher.py  confidence.py  cover_extractor.py  epub_handler.py  file_utils.py  kobo_utils.py  merger.py  metadata_types.py  mobi_handler.py  pdf_handler.py
backend/app/services/metadata/: google_books.py  open_library.py
backend/app/services/sources/: __init__.py  annas_archive.py  base.py
backend/app/tasks/: celery_app.py  download_book.py  enrich_authors.py  import_pipeline.py  library_scan.py  metadata_enrich.py  refresh_scan.py
backend/tests/: conftest.py  test_api_books.py  test_api_health.py  test_api_jobs.py  test_api_kobo.py  test_api_library.py  test_api_opds.py
caddy/: Caddyfile
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  (+2 more)
scripts/: capture_screenshots.py  seed_screenshots.py  start_demo_backend.sh  update_screenshots.sh
(+44 files in other folders)
